feat: add client service
